--- a/package.json
+++ b/package.json
@@ -37,7 +37,14 @@
     "@feathersjs/socketio": "^3.2.9",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "feathers-mongoose": "^7.3.2",
+    "feathers-sequelize": "^4.1.1",
+    "ger": "0.0.99",
     "helmet": "^3.15.1",
+    "mongodb-core": "^3.1.11",
+    "mongoose": "^5.4.17",
+    "pg": "^7.8.2",
+    "sequelize": "^4.42.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
